--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ link_location: welcome
   <div class="container">
     <h1>The J5 Project</h1>
     <p>Welcome to the J5 Project, a place to share my open source 3D Printable CAD designs.</p>
+    <p><a class="btn btn-primary btn-lg" href="/about_me">About Me</a></p>
   </div>
 </div>
