got in most of the code projects

--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@ link_location: welcome
   <div class="container">
     <h1>The J5 Project</h1>
     <p>Welcome to the J5 Project, a place to share my open source 3D Printable CAD designs.</p>
-    <p><a class="btn btn-primary btn-lg" href="/about_me">About Me</a></p>
   </div>
 </div>
+
+<p>
+Hi!  I'm Jimmy Hendrix, welcome to my projects page!
+</p>
+<p>
+I spend my days working on <a href="http://www.liveplan.com/" target="_blank">LivePlan.com</a>, making fantastic business planning software.  Then I split my free time between my awesome family and my side projects.  My early side projects were interesting bits of software, but now I focus on CAD for 3D printing.
+</p>
+<p>
+I first discovered 3D printers at Siggraph in my late teens and dreamed of one day having my own.  That day finally came over a decade later when consumer 3D printers fell into my price range.
+</p>
+<p>
+Then came the question: what now?
+</p>
+<p>
+After some experimenting with different technologies, I found <a href="http://www.openscad.org/" target="_blank">OpenSCAD</a>.  I could leverage my programming skills to make real things!  That's just what I did.
+</p>
+<p>
+From a lot of trial and error, I got familiar with the limitations of what consumer 3D printers are able to do well.  It became my goal to design neat things that would be easy to print reliably.  I launched this page to share those projects with you.
+</p>
+<p>
+Take a look around and <a href="https://twitter.com/j5project" target="_blank">follow me on twitter</a> for updates as I add more projects.
+</p>
+<p>
+Thanks for stopping by!
+</p>
+
