added page for choke tube

--- a/code_projects.html
+++ b/code_projects.html
@@ -66,7 +66,7 @@ Here are some open source software projects I have done for fun.
         Picrypt is a steganography program written in java that embeds highly encrypted files into normal images.  It uses public key encryption so keys can be easily shared between trusted parties.  Then pictures with embedded data can be shared through normal services as long as they serve the raw image instead of a compressed or resized version.
       </p>
       <p>
-        Build and run the project by cloning the <a href="https://github.com/pwntato/picrypt">repo</a> and first running "javac Picrypt.java picrypt/*.java" to compile it, followed by "java Picrypt" to run it.
+        Build and run the project by cloning the <a href="https://github.com/pwntato/picrypt">repo</a> and running the included build.sh file.
       </p>
     </div>
   </div>
