--- a/bandit_mk1.html
+++ b/bandit_mk1.html
@@ -14,12 +14,58 @@ link_location: bandit_mk1
   </div>
   <div class="col-md-8">
     <p>
-I wanted to try my hand at designing a trigger group, that turned into the Bandit MK1 Rubber Band Gun.  This gun is designed for 3D printing and should be a fairly easy, albeit time consuming, to print.  It is designed to use #10 rubber bands and it shoots them quite well.
+I wanted to try designing a trigger group, that project turned into the Bandit MK1 Rubber Band Gun.  This gun is designed for 3D printing and should be a fairly easy, albeit time consuming, to print.  Every single piece is printable, so no parts to source.  It is designed to use #10 rubber bands and it shoots them quite well.
     </p>
     <p>
-The trigger group is based loosely off of the Colt 1911.
+The trigger group is based loosely off of the Colt 1911.  I call this variant the scroll trigger because the other inspiration was the logo from the game <a href="https://scrolls.com/" target="_blank">Scrolls</a>.
     </p>
   </div>
 </div>
+<div class="row" style="padding-top:5px;">
+  <div class="col-md-6">
+    <a href="/img/bandit_mk1_cross_section_cocked.png" class="thumbnail" target="_blank">
+      <img src="/img/bandit_mk1_cross_section_cocked.png" />
+    </a>
+  </div>
+  <div class="col-md-6">
+    <a href="/img/bandit_mk1_cross_section_uncocked.png" class="thumbnail" target="_blank">
+      <img src="/img/bandit_mk1_cross_section_uncocked.png" />
+    </a>
+  </div>
+</div>
+<div class="row" style="padding-top:5px;">
+  <div class="col-md-12">
+    <p>
+I learned a lot from designing and printing this gun.  It took several iterations to get it right.  That being said, it is parameterized and you might need to do some tweaking to get the tolerances right on your printer.
+    </p>
+    <p>
+In order for me to get the pins to print correctly, I needed to wipe down the kapton tape on my print bed before each print.  This does a good job of removing dust and oils from touching the bed.  Otherwise most of the revisions were to get the tolerances correct.
+    </p>
+    <p>
+Since this was designed with 3D printing in mind, you'll notice several unique characteristics.  Not only are the pins flat on the bottom, but the holes have a flat side too.  This is to stop the pins from rotating, but also a flat 45 degree side on a round hole provided less sagging and a cleaner printed hole.  
+    </p>
+    <p>
+There are also several places where I have 45 degree cuts to prevent what would otherwise be a 90 degree overhang.  Where the grip meets the bottom of the trigger group is a good example, but you'll also see it on the front inside of the trigger group housing and back of the barrel.
+    </p>
+    <p>
+The last thing worth mentioning is the hollowed out part of the trigger group housing.  It's hollowed out to save print time and material.  You'll see it has a 45 degree cut in the front like I've mentioned before, but it also has a straight cut in the back connecting it to the main trigger group hollow.  That's because the STL files I use to print describe the surface on an object.  If that cut through wasn't there, the slicer wouldn't pick up the hollow part at all and it would be printed solid, with whatever infill I had set.
+    </p>
+    <p>
+You can get the OpenSCAD code by cloning the <a href="https://github.com/pwntato/bandit_mk1" target="_blank">repo</a>.  By default it will generate the parts in design mode.  It is a long print, so I recommend doing it as two prints.  For that, find where it is calling "parts_for_design();" and comment that out by putting // in front of it.  Then uncomment "platter_for_printing_trigger_group();" or "platter_for_printing_grip_and_barrel();" to generate each set of parts for printing.  You will need to print both sets to have a working rubber band gun.
+    </p>
+    <p>
+Keep an eye out for the Bandit MK2 that I am currently working on.  It will be more configurable and faster to print.  To get the latest news about my projects <a href="https://twitter.com/j5project" target="_blank">follow me on twitter</a>.
+    </p>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
 
 
