prerelease qa fixes

--- a/3d_printing_tips.html
+++ b/3d_printing_tips.html
@@ -17,7 +17,7 @@ Turns out my print bed was getting oily from when I was touching it.  The fix wa
 </p>
 <p>
 <strong>Extruder stops extruding and there is powdered ABS on the filament drive gear</strong><br/>
-This one drove me crazy for a while, but this was caused by the printer trying to extrude plastic faster than it could get it to temprature.  Therefore there are two solutions: slow down the print speed, or turn up the extruder temperature.  Be careful not to raise the temperature higher than your machine can handle.  If you get close to the max it can handle, it's time to slow things down.
+This one drove me crazy for a while, but it was caused by the printer trying to extrude plastic faster than it could get it to temprature.  Therefore there are two solutions: slow down the print speed, or turn up the extruder temperature.  Be careful not to raise the temperature higher than your machine can handle.  If you get close to the max it can handle, it's time to slow things down.
 </p>
 <p>
 <strong>Stepper motors click, but don't move when you tell them to</strong><br/>
