--- a/bandit_mk1.html
+++ b/bandit_mk1.html
@@ -14,7 +14,7 @@ link_location: bandit_mk1
   </div>
   <div class="col-md-8">
     <p>
-I wanted to try designing a trigger group, that project turned into the Bandit MK1 Rubber Band Gun.  This gun is designed for 3D printing and should be a fairly easy, albeit time consuming, to print.  Every single piece is printable, so no parts to source.  It is designed to use #10 rubber bands and it shoots them quite well.
+I wanted to try designing a trigger group.  That project turned into the Bandit MK1 Rubber Band Gun.  This gun is designed for 3D printing and should be a fairly easy, albeit time consuming, to print.  Every single piece is printable, so no parts to source.  It is designed to use #10 rubber bands and it shoots them quite well.
     </p>
     <p>
 The trigger group is based loosely off of the Colt 1911.  I call this variant the scroll trigger because the other inspiration was the logo from the game <a href="https://scrolls.com/" target="_blank">Scrolls</a>.
@@ -39,10 +39,10 @@ The trigger group is based loosely off of the Colt 1911.  I call this variant th
 I learned a lot from designing and printing this gun.  It took several iterations to get it right.  That being said, it is parameterized and you might need to do some tweaking to get the tolerances right on your printer.
     </p>
     <p>
-In order for me to get the pins to print correctly, I needed to wipe down the kapton tape on my print bed before each print.  This does a good job of removing dust and oils from touching the bed.  Otherwise most of the revisions were to get the tolerances correct.
+In order for me to get the pins to print correctly, I needed to wipe down the kapton tape on my print bed with acetone before each print.  This does a good job of removing dust and oils from touching the bed.  Otherwise most of the revisions were just to get the tolerances correct.
     </p>
     <p>
-Since this was designed with 3D printing in mind, you'll notice several unique characteristics.  Not only are the pins flat on the bottom, but the holes have a flat side too.  This is to stop the pins from rotating, but also a flat 45 degree side on a round hole provided less sagging and a cleaner printed hole.  
+Since this was designed with 3D printing in mind, you'll notice several unique characteristics.  Not only are the pins flat on the bottom, but the holes have a flat side too.  This is to stop the pins from rotating, but also a flat 45 degree side on top of a round hole provided less sagging and a cleaner printed hole.  
     </p>
     <p>
 There are also several places where I have 45 degree cuts to prevent what would otherwise be a 90 degree overhang.  Where the grip meets the bottom of the trigger group is a good example, but you'll also see it on the front inside of the trigger group housing and back of the barrel.
