--- a/choke_tube.html
+++ b/choke_tube.html
@@ -7,22 +7,27 @@ link_location: choke_tube
 ---
 <h1>Bug-A-Salt Choke Tube</h1>
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-5">
     <a href="/img/bug_a_salt.jpg" class="thumbnail" target="_blank">
      <img src="/img/bug_a_salt.jpg" />
     </a>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-7">
     <p>
 If you like fun and don't like bugs in your house, check out the <a href="http://bugasalt.com/" target="_blank">Bug-A-Salt</a>.  A month doesn't go by where I don't recommend it to someone.  It makes bug hunting like bird hunting.  Even better, it uses harmless table salt instead of toxic chemicals.
+    </p>
+    <p>
+One of my first projects on my printer was a choke tube to improve the spread of the salt coming out of the Bug-A-Salt.  This works just like choke tubes on shotguns for bird hunting.  It gradually narrows the barrel to more tightly group the shot, or in this case salt.  You have to aim a little better, but it does a lot more damage to whatever you hit.  This way you can take down bigger bugs in fewer shots.
     </p>
   </div>
 </div>
 <div class="row">
+  <div class="col-md-3">
+    <a href="/img/choke_tube_printed.jpg" class="thumbnail" target="_blank">
+     <img src="/img/choke_tube_printed.jpg" />
+    </a>
+  </div>
   <div class="col-md-6">
-    <p>
-One of my first projects on my printer was a choke tube to improve the spread of the salt coming out of the Bug-A-Salt.  This works just like choke tubes on shotguns for bird hunting.  It gradually narrows the barrel to more tightly group the shot, or in this case salt.  You have to aim a little better, but it does a lot more damage to whatever you hit.  This way you can take down bigger bugs in fewer shots.
-    </p>
     <p>
 This is a very easy and fairly fast print.  You can clone the OpenSCAD code from the <a href="https://github.com/pwntato/choke_tube" target="_blank">repo</a>.  It should be fully parameterized.  You might need to play with settings a little to get it to fit snuggly over the Bug-A-Salt barrel.  These are the settings that work well on my printer.  You can also try out making it longer or shorter as well as making the choke wider or narrower.
     </p>
@@ -36,10 +41,6 @@ Choke tubes make good gifts.  I've made several of these for friends after sugge
   <div class="col-md-3">
     <a href="/img/choke_tube_crosssection.png" class="thumbnail" target="_blank">
      <img src="/img/choke_tube_crosssection.png" />
-    </a>
-    <br/>
-    <a href="/img/choke_tube_printed.jpg" class="thumbnail" target="_blank">
-     <img src="/img/choke_tube_printed.jpg" />
     </a>
   </div>
 </div
