--- a/code_projects.html
+++ b/code_projects.html
@@ -13,20 +13,20 @@ Here are some open source software projects I have done for fun.
 <p>
   <strong>Nebuloid</strong><br/>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-4">
       <a href="/img/nebuloid.png" class="thumbnail" target="_blank">
        <img src="/img/nebuloid.png" />
       </a>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-8">
       <p>
-        Nebuloid is a top down space shooter written in java.  You fly around looking for colored nebulae which change your ship to shoot that color of laser, which is the only way to get through barriers of the same color.  Destroy the barriers around the mother ship and destroy it to beat the level.
+        Nebuloid is a top down space shooter written in java.  Fly around looking for colored nebulae to change your ship to shoot that color of laser, which is the only way to get through colored barriers.  Destroy the barriers around the mother ship and blow it up to beat the level.
       </p>
       <p>
         This could be a good way to learn about game loops and events to start on a game of your own.
       </p>
       <p>
-        Build and run the project by cloning the <a href="https://github.com/pwntato/nebuloid">repo</a> and running the included build.sh file.
+        Build and run the project by cloning the <a href="https://github.com/pwntato/nebuloid" target="_blank">repo</a> and running the included build.sh file.
       </p>
     </div>
   </div>
@@ -35,12 +35,12 @@ Here are some open source software projects I have done for fun.
 <p>
   <strong>PointAndPixel</strong>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-4">
       <a href="/img/pointAndPixel.png" class="thumbnail" target="_blank">
        <img src="/img/pointAndPixel.png" />
       </a>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-8">
       <p>
         PointAndPixel is a pixel art program written in java.  You can either work free form or you can import an image to start from.
       </p>
@@ -48,7 +48,7 @@ Here are some open source software projects I have done for fun.
         I wrote this after seeing a friend make pixel art in a spreadsheet.
       </p>
       <p>
-        Build and run the project by cloning the <a href="https://github.com/pwntato/PointAndPixel">repo</a> and running the included build_jar.sh file.
+        Build and run the project by cloning the <a href="https://github.com/pwntato/PointAndPixel" target="_blank">repo</a> and running the included build_jar.sh file.
       </p>
     </div>
   </div>
@@ -56,17 +56,17 @@ Here are some open source software projects I have done for fun.
 <p>
   <strong>Picrypt</strong>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-4">
       <a href="/img/picrypt.png" class="thumbnail" target="_blank">
        <img src="/img/picrypt.png" />
       </a>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-8">
       <p>
         Picrypt is a steganography program written in java that embeds highly encrypted files into normal images.  It uses public key encryption so keys can be easily shared between trusted parties.  Then pictures with embedded data can be shared through normal services as long as they serve the raw image instead of a compressed or resized version.
       </p>
       <p>
-        Build and run the project by cloning the <a href="https://github.com/pwntato/picrypt">repo</a> and running the included build.sh file.
+        Build and run the project by cloning the <a href="https://github.com/pwntato/picrypt" target="_blank">repo</a> and running the included build.sh file.
       </p>
     </div>
   </div>
