--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ link_location: welcome
 Hi!  I'm Jimmy Hendrix, welcome to my projects page!
 </p>
 <p>
-I spend my days working on <a href="http://www.liveplan.com/" target="_blank">LivePlan.com</a>, making fantastic business planning software.  Then I split my free time between my awesome family and my side projects.  My early side projects were interesting bits of software, but now I focus on CAD for 3D printing.
+I spend my days working on <a href="http://www.liveplan.com/" target="_blank">LivePlan.com</a>, making fantastic business planning software.  Then I split my free time between my awesome family and my side projects.  My early side projects were interesting bits of software, but now I focus mostly on CAD for 3D printing.
 </p>
 <p>
 I first discovered 3D printers at Siggraph in my late teens and dreamed of one day having my own.  That day finally came over a decade later when consumer 3D printers fell into my price range.
