--- a/3d_printing_tips.html
+++ b/3d_printing_tips.html
@@ -23,6 +23,10 @@ This one drove me crazy for a while, but it was caused by the printer trying to 
 <strong>Stepper motors click, but don't move when you tell them to</strong><br/>
 For me, this meant a bad power supply.  Test the voltage, if it is putting out less than the printer needs, then you need a new power supply.  My printer needs 12 volts and when this happened the power supply was only putting out 9 volts.  Replacing the power supply got me back up and running.
 </p>
+<p>
+<strong>Printer makes weird screeching sounds</strong><br/>
+This was another easy one to solve.  I'd been printing a lot for several months and the printer needed to be lubricated.  The key here was to use white lithium grease.  There might be a temptation to use WD-40, but from what I have read, that can be very bad for a printer.  The white lithium grease is not too expensive and can be ordered from amazon.com.  I applied it to the moving bits and it quieted everything down.
+</p>
 
 
 
