--- a/bandit_mk1.html
+++ b/bandit_mk1.html
@@ -54,7 +54,10 @@ The last thing worth mentioning is the hollowed out part of the trigger group ho
 You can get the OpenSCAD code by cloning the <a href="https://github.com/pwntato/bandit_mk1" target="_blank">repo</a>.  By default it will generate the parts in design mode.  It is a long print, so I recommend doing it as two prints.  For that, find where it is calling "parts_for_design();" and comment that out by putting // in front of it.  Then uncomment "platter_for_printing_trigger_group();" or "platter_for_printing_grip_and_barrel();" to generate each set of parts for printing.  You will need to print both sets to have a working rubber band gun.
     </p>
     <p>
-Keep an eye out for the Bandit MK2 that I am currently working on.  It will be more configurable and faster to print.  To get the latest news about my projects <a href="https://twitter.com/j5project" target="_blank">follow me on twitter</a>.
+For a more simple, faster printing version, check out the <a href="/bandit_mk2/">Bandit MK2</a>. 
+    </p>
+    <p>
+To get the latest news about my projects <a href="https://twitter.com/j5project" target="_blank">follow me on twitter</a>.
     </p>
   </div>
 </div>
