--- a/choke_tube.html
+++ b/choke_tube.html
@@ -37,6 +37,9 @@ Once the print is done, the choke just slides over the end of the barrel.  You c
     <p>
 Choke tubes make good gifts.  I've made several of these for friends after suggesting they get a Bug-A-Salt.  They've all noticed an improvement in performance when it's on.  
     </p>
+    <p>
+To get the latest news about my projects <a href="https://twitter.com/j5project" target="_blank">follow me on twitter</a>.
+    </p>
   </div>
   <div class="col-md-3">
     <a href="/img/choke_tube_crosssection.png" class="thumbnail" target="_blank">
